# tasks

./: .hc  404.html  Cargo.toml  README.md  flake.nix  hashmap.json  index.html  introduction.html  package-lock.json  package.json  pnpm-lock.yaml  setup.html  tasks-store.html
assets/: app.BVHxXuUO.js  elements_create-task.md.7DwjHCXW.js  elements_create-task.md.7DwjHCXW.lean.js  elements_create-task.md.8SrLE8xK.js  elements_create-task.md.8SrLE8xK.lean.js  elements_create-task.md.B0K34as2.js  elements_create-task.md.B0K34as2.lean.js  elements_create-task.md.Bbs5Qa8H.js  elements_create-task.md.Bbs5Qa8H.lean.js  elements_create-task.md.BeaAf_qk.js  elements_create-task.md.BeaAf_qk.lean.js  elements_create-task.md.BflJMdvZ.js  elements_create-task.md.BflJMdvZ.lean.js  elements_create-task.md.BmEUTr3G.js  elements_create-task.md.BmEUTr3G.lean.js  elements_create-task.md.C6uUxmKB.js  elements_create-task.md.C6uUxmKB.lean.js  elements_create-task.md.CJsVDffg.js  elements_create-task.md.CJsVDffg.lean.js  elements_create-task.md.CPcT107p.js  elements_create-task.md.CPcT107p.lean.js  elements_create-task.md.CgwNKKpJ.js  elements_create-task.md.CgwNKKpJ.lean.js  elements_create-task.md.CqY1UncW.js  elements_create-task.md.CqY1UncW.lean.js  elements_create-task.md.D62A_PFC.js  elements_create-task.md.D62A_PFC.lean.js  elements_create-task.md.D7ePC7H-.js  elements_create-task.md.D7ePC7H-.lean.js  elements_create-task.md.DCiMBYP3.js  elements_create-task.md.DCiMBYP3.lean.js  elements_create-task.md.DObFbeZv.js  elements_create-task.md.DObFbeZv.lean.js  (+306 more)
docs/: index.md  package.json  (+3 more)
(+1238 files in other folders)
