[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["zomes/coordinator/*", "zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
holochain = { version = "0.3.1-rc.1", default-features = false, features = [
  "test_utils",
] }
hdi = "0.4.1-rc.1"
hdk = "0.3.1-rc.1"
serde = "1"

